lib_config edits

--- a/bifrost_lib_config.json
+++ b/bifrost_lib_config.json
@@ -1,8 +1,8 @@
 {
   "AminoConfigurations": [
     {
-      "vendorName": "Maxime Jeanmougin",
-      "libraryVersion": "2.0.0",
+      "vendorName": "Jason Brown",
+      "libraryVersion": "0.0.9",
       "libraryName": "VHH",
       "jsonLibs": [
         {
